Added list of board member candidates to Annual Meeting notice.

--- a/index.html
+++ b/index.html
@@ -246,18 +246,16 @@
                 <div class="top-area">
                   <h3 class="title">Stagg Hill Annual Meeting</h3>
                   <h6>Thursday November 20th</h6>
-                  <p>Location: The Blue Hills Room at Stagg Hill Golf Course.</p>
+                  <p>
+                    Location: The Blue Hills Room at Stagg Hill Golf Course.
+                  </p>
                   <p>
                     There are 3 Board seats available. If you would like to run
                     for the board, please contact Nominating Committee Chair
                     Brenda Neel at
-                    <a
-                      href="mailto:bk_neel@yahoo.com"
-                      >bk_neel@yahoo.com</a
-                    >
+                    <a href="mailto:bk_neel@yahoo.com">bk_neel@yahoo.com</a>
                     or Marlin Whitney at
-                    <a
-                      href="mailto:marlinwhitney1@yahoo.com"
+                    <a href="mailto:marlinwhitney1@yahoo.com"
                       >marlinwhitney1@yahoo.com </a
                     >.
                   </p>
@@ -274,24 +272,89 @@
                       >here</a
                     >.
                   </p>
+                  <hr />
+                  <h6>Meet Your Candidates</h6>
+                  <div class="row flex-row candidate-row">
+                    <div>Steve Preston</div>
+                    <div class="spanner"></div>
+                    <div>
+                      <a
+                        href="assets/documents/Steve-Preston.pdf"
+                        class="bio-link"
+                        target="_blank"
+                        >Bio
+                        <img
+                          src="assets/images/icons/link.svg"
+                          class="injectable"
+                          alt=""
+                      /></a>
+                    </div>
+                  </div>
+                  <div class="row flex-row candidate-row">
+                    <div>Kayla Howard</div>
+                    <div class="spanner"></div>
+                    <div>
+                      <a
+                        href="assets/documents/Kayla-Howard.pdf"
+                        class="bio-link"
+                        target="_blank"
+                        >Bio
+                        <img
+                          src="assets/images/icons/link.svg"
+                          class="injectable"
+                          alt=""
+                      /></a>
+                    </div>
+                  </div>
+                  <div class="row flex-row candidate-row">
+                    <div>Justin Howard</div>
+                    <div class="spanner"></div>
+                    <div>
+                      <a
+                        href="assets/documents/Justin-Howard.pdf"
+                        class="bio-link"
+                        target="_blank"
+                        >Bio
+                        <img
+                          src="assets/images/icons/link.svg"
+                          class="injectable"
+                          alt=""
+                      /></a>
+                    </div>
+                  </div>
+                  <div class="row flex-row candidate-row">
+                    <div>Jason Lembright</div>
+                    <div class="spanner"></div>
+                    <div>
+                      <a
+                        href="assets/documents/Jason-Lembright.pdf"
+                        class="bio-link"
+                        target="_blank"
+                        >Bio
+                        <img
+                          src="assets/images/icons/link.svg"
+                          class="injectable"
+                          alt=""
+                      /></a>
+                    </div>
+                  </div>
+                  <div class="row flex-row candidate-row">
+                    <div>Brent Cain</div>
+                    <div class="spanner"></div>
+                    <div>
+                      <a
+                        href="assets/documents/Brent-Cain.pdf"
+                        class="bio-link"
+                        target="_blank"
+                        >Bio
+                        <img
+                          src="assets/images/icons/link.svg"
+                          class="injectable"
+                          alt=""
+                      /></a>
+                    </div>
+                  </div>
                 </div>
-                <!-- <div class="row link-bar flex-row">
-                    <div>Click here to sign-up</div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="32"
-                      viewBox="0 0 32 32"
-                    >
-                      <path
-                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
-                        stroke="#999999"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </div> -->
               </div>
             </div>
           </div>
@@ -393,12 +456,7 @@
                     <hr />
                     <div class="specials">
                       <h5>
-                        <img
-                          src="assets/images/icons/fire.svg"
-                          class="injectable fire-icon"
-                          alt=""
-                        />
-                        Current Pro Shop Specials
+                        🔥 Current Pro Shop Specials
                       </h5>
                       <p class="deal">40% OFF Adidas Shoes in Stock</p>
                       <p class="deal">25% OFF T-Shirts in Stock</p>
