--- a/pro-shop.html
+++ b/pro-shop.html
@@ -132,12 +132,7 @@
               <div class="col-12">
                 <div class="specials rounded-corners">
                   <h5>
-                    <img
-                      src="assets/images/icons/fire.svg"
-                      class="injectable fire-icon"
-                      alt=""
-                    />
-                    August Pro Shop Specials
+                   🔥 August Pro Shop Specials
                   </h5>
                   <p class="deal">40% OFF Adidas Shoes in Stock</p>
                   <p class="deal">25% OFF T-Shirts in Stock</p>
