Expiring an Open Tournament.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -254,11 +254,11 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Fall Fling 2 Person Shamble</h4>
                     <p>Sunday, October 12th, 9am SG</p>
-                    <a
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Register/67533/fall-fling-2-shamble"
                       class="pillock"
                       target="_blank"
@@ -269,7 +269,7 @@
                         alt=""
                       />
                       Register
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
