Updating 2 Cup, 4 Person Tournament date.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -278,8 +278,8 @@
 
                 <div class="single-consulting-one">
                   <div class="right-area">
-                    <h4>2 Cup 4 Person Scramble</h4>
-                    <p>Sunday, November 9th, 10:30am SG</p>
+                    <h4>2 Cup, 4 Person Scramble</h4>
+                    <p>Sunday, November 16th, 10:30am SG</p>
                     <a
                       href="https://manager.gallusgolf.com/Register/67534/2-cup-4-scramble"
                       class="pillock"
