Adding notice about 2 Cup, 4 Person Scramble date change.

--- a/index.html
+++ b/index.html
@@ -233,6 +233,29 @@
         >
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
+              <div class="image-area vertical-stag">
+                <img
+                  loading="lazy"
+                  rel="preload"
+                  src="images/vertical-stag.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="inner-content-area d-flex">
+                <div class="top-area">
+                  <h3 class="title">Event Update!</h3>
+                  <h6>2 Cup, 4 Person Scramble Date Change</h6>
+                  <p>
+                    The "2 Cup, 4 Person Scramble", originally scheduled for
+                    Sunday, Nov 9th, has been rescheduled for Sunday, Nov 16th.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start border-left">
               <div class="image-area">
                 <img
                   loading="lazy"
@@ -455,9 +478,7 @@
                     <p>Click <u>here</u> to check out the new pro shop page.</p>
                     <hr />
                     <div class="specials">
-                      <h5>
-                        🔥 Current Pro Shop Specials
-                      </h5>
+                      <h5>🔥 Current Pro Shop Specials</h5>
                       <p class="deal">40% OFF Adidas Shoes in Stock</p>
                       <p class="deal">25% OFF T-Shirts in Stock</p>
                     </div>
