Updating to show 2 Cup, 4 Person Scramble results.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -276,12 +276,12 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>2 Cup, 4 Person Scramble</h4>
                     <p>Sunday, November 16th, 10:30am SG</p>
                     <a
-                      href="https://manager.gallusgolf.com/Register/67534/2-cup-4-scramble"
+                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67534"
                       class="pillock"
                       target="_blank"
                     >
@@ -290,7 +290,7 @@
                         src="assets/images/svgs/register.svg"
                         alt=""
                       />
-                      Register
+                      Results
                     </a>
                   </div>
                   <div class="timeline-dot">
