Removed link for annual meeting.

--- a/index.html
+++ b/index.html
@@ -262,16 +262,7 @@
                   </p>
                   <p>
                     We will be hosting a taco bar for all attendees beginning at
-                    6pm with the meeting starting at 7pm. Members that are
-                    active and paid an initiation fee are eligible to come to
-                    the meeting. We are asking that if you are coming for the
-                    dinner to please sign up
-                    <a
-                      href="https://form.jotform.com/252954187193164"
-                      target="_blank"
-                      style="display: inline; text-decoration: underline"
-                      >here</a
-                    >.
+                    6pm with the meeting starting at 7pm.
                   </p>
                   <hr />
                   <h6>Meet Your Candidates</h6>
